# -oop-endterm-FtpClient

./: .gitignore  CMakeLists.txt  reports.docx
include/: functions.h  wininet_errno.h
src/: functions.cpp  index.cpp
